2013-01-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Handle case where no records are returned better.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Trap count() for zero size counts.

2013-01-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Count cycle end correctly.

2013-01-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBProgress.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Update and Create progress.

2013-01-02 Riccardo Mottola <rm@gnu.org>

	* DBProgress.m
	Check for a valid maxVal

2012-12-29 Riccardo Mottola <rm@gnu.org>

	* DBProgress.m
	* DBProgress.h
	Time estimation.

2012-12-29 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Call progress reset before starting task.

2012-12-20 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Support for LIMIT in query identify, single-batch.

2012-12-13 Riccardo Mottola <rm@gnu.org>

	* DBProgressProtocol.h
	* DBProgress.h
	Remove setLogger from the protocol.

2012-12-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Settable timeout values for query and stnadard methods.

2012-11-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
        release before assigning.

2012-11-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	retain sessionId variable

2012-11-08 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	queryFull: Return autoreleased array.

	* DBCVSWriter.m
	Clean up.

2012-11-06 Riccardo Mottola <rm@gnu.org>

	* DBCVSReader.m
	Handle terminal empty fields in record.

2012-11-05 Riccardo Mottola <rm@gnu.org>

	* DBCVSReader.m
	Handle initial empty fields and set them to ""

2012-11-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Query Identify progress monitor.

2012-11-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Select progress monitor.

2012-11-03 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	* DBSoapCSV.m
	Multi-key identify in batch and non-batch mode.
