@@ -1,3 +1,9 @@
+2013-01-12 Riccardo Mottola <rm@gnu.org>
+
+	* DBObjectInspector.m
+	* English.lproj/ObjectInspector.nib
+	Make cells selectable.
+
 2013-01-04 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
